Fixes ScrollBar Issue and adds Stick Signal R Dependecy

--- a/Portfolio Website/wwwroot/css/styles/compiled/htmloverride.css
+++ b/Portfolio Website/wwwroot/css/styles/compiled/htmloverride.css
@@ -2,47 +2,56 @@
 html, body {
   width: 100%;
   height: 100%;
-  font-family: "Nunito", sans-serif; }
+  font-family: "Nunito", sans-serif;
+}
 
 body {
   background-color: #242F36;
-  color: #EFF1F3; }
+  color: #EFF1F3;
+}
 
 p {
   background-color: inherit;
-  color: inherit; }
+  color: inherit;
+}
 
 h1 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   font-size: 4rem;
   margin-bottom: 0;
-  font-style: italic; }
+  font-style: italic;
+}
 
 h2 {
   font-family: "Nunito", sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
-  font-style: italic; }
+  font-style: italic;
+}
 
 h3 {
   font-family: "Nunito", sans-serif;
   font-weight: lighter;
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 h4 {
   font-size: 2rem;
   font-style: italic;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+}
 
 a, ul, li {
   padding: 0;
   list-style-type: none;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 a:hover {
   color: inherit;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 a.active:after {
   transform: scaleX(1);
@@ -50,7 +59,8 @@ a.active:after {
   text-decoration: none;
   border-radius: 5px;
   color: var(--underlinecolor, #B4E4D2);
-  transition: transform 0.25s ease-out; }
+  transition: transform 0.25s ease-out;
+}
 
 button {
   color: inherit;
@@ -58,18 +68,22 @@ button {
   border: none;
   font: inherit;
   outline: none;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 button:focus {
   outline: 0;
   text-decoration: none;
-  border: none; }
+  border: none;
+}
 
 img {
   height: inherit;
   border-radius: 2rem;
   object-fit: contain;
-  animation: fadeInDown 800ms ease-out both; }
+  animation: fadeInDown 800ms ease-out both;
+}
 
 i {
-  color: #77be8d; }
+  color: #77be8d;
+}
